istio/envoy-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy-proxy
  template:
    metadata:
      labels:
        app: envoy-proxy
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy:dev-706fe7871ab5fe631406db1e0fe5af1c4d0eb1b8
        ports:
        - containerPort: 9901
