istio/envoy-pod-deploy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: envoy-pod
spec:
  containers:
  - name: envoy-container
    image: envoyproxy/envoy:dev-706fe7871ab5fe631406db1e0fe5af1c4d0eb1b8
