istio/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-service
spec:
  type: ClusterIP
  ports:
  - port: 9901
    targetPort: 8901
    name: envoy-port
  selector:
    app: envoy-proxy
