istio/envoy-ds.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy-proxy
  template:
    metadata:
      labels:
        app: envoy-proxy
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy:dev-706fe7871ab5fe631406db1e0fe5af1c4d0eb1b8
        ports:
        - containerPort: 9901

---
apiVersion: v1
kind: Service
metadata:
  name: envoy-service
spec:
  type: ClusterIP
  ports:
  - port: 9901
    targetPort: 9901
    name: envoy-port
  selector:
    app: envoy-proxy

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: envoy-ingress
  annotations:
    kubernetes.io/ingress.class: "envoy"
    envoyproxy.io/cluster: "nginx-cluster"
spec:
  ingressClassName: envoy
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
                number: 80
