istio/envoy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: envoy-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-deployment
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: envoy-service
            port:
                number: 8080
